--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,28 +1,33 @@
 .page-form {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: sans-serif;
   line-height: 1.5;
   color: #2f2f37;
   max-width: 100%;
   padding: 20px;
 
   background-image: linear-gradient(
-    90deg,
-    #020024 0%,
-    #090979 35%,
-    #00d4ff 100%
+    45deg,
+    #66c90a 0%,
+    #ff76a4 45%,
+    #5ca2fc 100%
   );
-  border-bottom: 1px solid #49494d;
-  box-shadow: 1px 6px 20px 1px rgba(0, 0, 0, 0.81);
-  -webkit-box-shadow: 1px 6px 20px 1px rgba(0, 0, 0, 0.81);
-  -moz-box-shadow: 1px 6px 20px 1px rgba(0, 0, 0, 0.81);
 
+  box-shadow: 1px 5px 20px 1px rgba(0, 0, 0, 0.61);
   margin-bottom: 20px;
 
   position: fixed;
   top: 0;
   z-index: 100;
   width: 100%;
+}
+
+.page-form input {
+  border-radius: 4px;
+  border-color: transparent;
+  transition: border-color linear 250ms;
+  &:hover {
+    border-color: #f4dfdf;
+  }
 }
 
 .search-form {
@@ -32,12 +37,16 @@
 
 .search-button {
   font-weight: 500;
-  margin-left: 10px;
-  padding: 6px;
-  border-radius: 2px;
+  font-size: 14;
+  margin-left: 15px;
+  padding: 6px 20px;
+  border-radius: 4px;
+  border-color: transparent;
+  background-color: #fff;
   cursor: pointer;
+  transition: background-color linear 250ms;
   &:hover {
-    background-color: #bdbcbc;
+    background-color: #f4dfdf;
   }
 }
 
@@ -59,16 +68,14 @@
   flex-wrap: wrap;
   align-items: flex-end;
 
-  padding: 15px;
+  padding: 10px;
   border: 1px solid rgba(128, 128, 128, 0.658);
   max-width: 100%;
   flex-basis: calc(100% / 4 - 30px);
   margin-top: 30px;
   margin-left: 30px;
 
-  box-shadow: 10px 10px 18px -1px rgba(0, 0, 0, 0.62);
-  -webkit-box-shadow: 10px 10px 18px -1px rgba(0, 0, 0, 0.62);
-  -moz-box-shadow: 10px 10px 18px -1px rgba(0, 0, 0, 0.62);
+  box-shadow: 1px 1px 15px -1px rgba(0, 0, 0, 0.52);
 
   &:not(:last-child) {
     margin-bottom: 0;
@@ -80,6 +87,7 @@
 .info {
   display: flex;
   justify-content: space-around;
+  color: #2f2f37;
 }
 .info-item {
   margin-left: 6px;
@@ -97,15 +105,20 @@ span {
 
 .load-more {
   font-weight: 500;
-  padding: 10px;
-  border-radius: 5px;
+  font-size: 16;
+  margin-left: 15px;
+  padding: 8px 20px;
+  border-radius: 4px;
+  border-color: #ff76a4;
+  background-color: #fff;
   display: block;
   margin: auto;
   margin-top: 30px;
   margin-bottom: 20px;
-  cursor: pointer;
   visibility: hidden;
+  cursor: pointer;
+  transition: border-color linear 250ms;
   &:hover {
-    background-color: #bdbcbc;
+    border-color: #5ca2fc;
   }
 }
